--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^11.9.0",
+    "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -22,5 +23,4 @@
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4"
   }
-
 }
